Temporarily added positioning styles. Need to break out later.

--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,16 @@ code {
   background: #eee;
 }
 
+/* Positioning Styles */
+
+.bottom0 {
+  bottom: 0px;
+}
+
+.left0 {
+  left: 0px;
+}
+
 .container {
   box-sizing: border-box;
   width: 100%;
