sort of working

--- a/src/App.css
+++ b/src/App.css
@@ -76,3 +76,16 @@ code {
   height: 16px;
   margin-right: 10px;
 }
+
+/* canvas */
+
+#canvas {
+  height: 1000px;
+  width: 1000px;
+}
+
+.canvas-container {
+  width: 1000px;
+  height: 200px;
+  border: 5px black solid;
+}
