Captured image is now overlaid over webcam container. Need to implement button state change.

--- a/src/App.css
+++ b/src/App.css
@@ -20,12 +20,20 @@ code {
 
 /* Positioning Styles */
 
+.top0 {
+  top: 0px;
+}
+
 .bottom0 {
   bottom: 0px;
 }
 
 .left0 {
   left: 0px;
+}
+
+.overflow-auto {
+  overflow: auto;
 }
 
 /* Aesthetics */
