--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,13 @@
 /* PAGE */
 
+html {
+  height: 100%;
+}
+
 body,
 .pure-g [class*=pure-u] {
   font-family: 'Open Sans', sans-serif;
+  height: 100%;
 }
 
 h1, h2, h3 {
